# veriview

./: .gitignore  LICENSE  README.md  example.v  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
backend-cpp/: CMakeLists.txt  MODULE.bazel  README.md  build.bat  build.sh  main.cpp  modules.hpp  netlist.json
frontend-react/: package-lock.json  package.json
frontend-react/public/: index.html
frontend-react/src/: App.js  index.js
src/: App.css  App.jsx  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/DesignViewer/: DesignViewer.css  DesignViewer.jsx
src/components/EmptyState/: EmptyState.css  EmptyState.jsx
src/components/Header/: Header.css  Header.jsx
src/hooks/: useDesignData.js
src/services/: verilogService.js
src/utils/: cytoscapeConfig.js  designTransformers.js
tools/: lint.bat  lint.sh
